# wikipedia-agent

./: .dockerignore  .env.example  DOCKER.md  Dockerfile  INTEGRATION_TESTS_READY.md  PROVIDERS.md  README.md  TESTING.md  demo.py  docker-compose.yml  docker-entrypoint.sh  providers.py  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_docker_integration.py  test_documented_features.py  test_integration.py  test_smoke.py  validate_setup.py  wikipedia-agent.cast  wikipedia_agent.py
.github/workflows/: integration-tests.yml
src/wikipedia_agent/: __init__.py  __main__.py  cli.py
src/wikipedia_agent/core/: __init__.py  providers.py  utils.py
src/wikipedia_agent/tools/: __init__.py  image_analyser.py
src/wikipedia_agent/ui/: __init__.py  app.py
src/wikipedia_agent/v1/: __init__.py  agent.py
src/wikipedia_agent/v2/: __init__.py  agent.py  code_executor.py  prompts.py  wikipedia_search.py
tests/: __init__.py  conftest.py
tests/integration/: test_docker.py  test_documented_features.py  test_v1_agent.py  test_v2_agent.py
tests/unit/: test_code_executor.py  test_prompts.py  test_providers.py  test_utils.py  test_wikipedia_search.py
